<resources>
    <string name="app_name">My Finance Manager</string>
    <string name="add_expense">Adicionar despesa</string>
    <string name="add_revenue">Adicionar receita</string>
    <string name="edit_revenue">Editar receita</string>
    <string name="edit_expense">Editar despesa</string>
    <string name="expense">Despesa</string>
    <string name="revenue">Receita</string>
    <string name="value">Valor</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="expense_was_paid">Despesa foi paga?</string>
    <string name="revenue_was_receveid">Receita foi recebida?</string>
    <string name="add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="cash">R$</string>

    <string name="empty_value">Preencha o campo valor</string>
    <string name="empty_username">Preencha o campo nome do usuário</string>
    <string name="empty_email">Preencha o campo e-mail</string>
    <string name="empty_password">Preencha o campo senha</string>
    <string name="empty_description">Preencha o campo valor</string>
    <string name="empty_date">Selecione uma data</string>

    <string name="success_recover">E-mail enviado com sucesso</string>
    <string name="success_delete">Registro removido com sucesso</string>
    <string name="success_expense">Despesa adicionada com sucesso</string>
    <string name="success_expense_update">Despesa atualizada com sucesso</string>
    <string name="success_revenue_update">Receita atualizada com sucesso</string>
    <string name="success_revenue_delete">Receita atualizada com sucesso</string>
    <string name="success_revenue">Receita adicionada com sucesso</string>
    <string name="success_register">Usuário criado com sucesso</string>

    <string name="error">Um erro inesperado aconteceu</string>

    <string name="no_result_list">Nenhum registro encontrado</string>
    <string name="error_recover_password">Erro ao enviar e-mail de recuperação de senha</string>

    <string name="paid">Pago</string>
    <string name="not_paid">Não pago</string>
    <string name="not_charged">Não recebido</string>
    <string name="charged">Recebido</string>
    <string name="pending">pendente</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="forget_password"><u>Esqueci minha senha</u></string>
    <string name="forget_password2">Esqueci minha senha</string>
    <string name="register"><u>Cadatrar-se</u></string>
    <string name="register2">Cadatrar</string>
    <string name="username">Nome de usuário</string>
    <string name="digit_your_email">Digite seu e-mail</string>
    <string name="forget_passoword_info">Enviaremos um e-mail para recuperação de senha</string>
    <string name="send">Enviar</string>
    <string name="graphics">Gráficos</string>
    <string name="reports">Relatórios</string>
    <string name="home">Home</string>
    <string name="save">Salvar</string>
    <string name="delete_revenue">Apagar receita</string>
    <string name="delete_expense">Apagar despesa</string>
    <string name="logout">Sair</string>
    <string name="statitics">Estatísticas</string>
    <string name="delete_question">Deletar?</string>
    <string name="delete_expense_question">Deseja apagar essa despesa?</string>
    <string name="delete_revenue_question">Deseja apagar essa revenue?</string>
    <string name="delete">Apagar</string>
    <string name="user_not_found">Usuário não está cadastrado</string>
    <string name="email_password_not_found">E-mail e senha não correspondem a um usuário cadastrado</string>
    <string name="error_register">Erro ao cadastrar usuário: </string>


</resources>